add another app

--- a/angular.json
+++ b/angular.json
@@ -116,6 +116,122 @@
           }
         }
       }
+    },
+    "second": {
+      "projectType": "application",
+      "root": "apps/second",
+      "sourceRoot": "apps/second/src",
+      "prefix": "cloud",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "outputs": ["{options.outputPath}"],
+          "options": {
+            "outputPath": "dist/second",
+            "index": "apps/second/src/index.html",
+            "main": "apps/second/src/main.ts",
+            "polyfills": "apps/second/src/polyfills.ts",
+            "tsConfig": "apps/second/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": ["apps/second/src/favicon.ico", "apps/second/src/assets"],
+            "styles": ["apps/second/src/styles.scss"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "apps/second/src/environments/environment.ts",
+                  "with": "apps/second/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "second:build:production"
+            },
+            "development": {
+              "browserTarget": "second:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "second:build"
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "apps/second/src/**/*.ts",
+              "apps/second/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/apps/second"],
+          "options": {
+            "jestConfig": "apps/second/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
+    },
+    "second-e2e": {
+      "root": "apps/second-e2e",
+      "sourceRoot": "apps/second-e2e/src",
+      "projectType": "application",
+      "architect": {
+        "e2e": {
+          "builder": "@nrwl/cypress:cypress",
+          "options": {
+            "cypressConfig": "apps/second-e2e/cypress.json",
+            "tsConfig": "apps/second-e2e/tsconfig.e2e.json",
+            "devServerTarget": "second:serve:development"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "second:serve:production"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": ["apps/second-e2e/**/*.{js,ts}"]
+          }
+        }
+      }
     }
   },
   "cli": {
